# webol-cli

./: .gitignore  Cargo.toml  docker-compose.yml  webol-cli.toml
.github/workflows/: check.yml
src/: cli.rs  config.rs  error.rs  main.rs
src/requests/: device.rs  get.rs  mod.rs  start.rs
