[package]
name = "webol-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
dirs = "5.0.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_json = "1.0.107"
