[package]
name = "webol-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webol"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.4"
config = "0.13.3"
dirs = "5.0.1"
futures-util = "0.3.29"
indicatif = "0.17.7"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = "0.20.1"
