[package]
name = "webol-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webol"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
config = "0.14"
dirs = "5.0"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = "0.21"
